# reed-solomon

./: .gitattributes  .gitignore  README.md  SPEC.md  pyproject.toml
docs/: mixed-smooth-counterexample.md  organizer-question.md  proof-ledger.md
reports/: capacity-summary.md  capacity-table.csv  domain-comparison-summary.md  domain-comparison.csv  exact-sweep-summary.md  exact-sweep.csv  lower-bound-grid-summary.md  lower-bound-grid.csv  mixed-smooth-counterexample.json  quotient-lower-bound-summary.md  quotient-materialized-primes.csv  run-metadata.md  structured-centers-summary.md  structured-centers.csv  test-results.txt  triage-domain-comparison-summary.md  triage-domain-comparison.csv  triage-patterns-random-summary.md  triage-patterns-random.csv  triage-patterns-smooth-coset-summary.md  triage-patterns-smooth-coset.csv  triage-patterns-summary.md  triage-patterns.csv  triage-search-summary.md  triage-validation-summary.md  triage-validation.csv
src/rs_grand_list_decoding/: __init__.py  exact_search.py  finite_field.py  lower_bound_constructions.py  quotient_lower_bound_search.py  rs_capacity_threshold.py  rs_code.py  structured_bad_centers.py  triage_search.py  triage_validation.py
tests/: test_capacity_threshold.py  test_exact_search.py  test_finite_field.py  test_lower_bound_constructions.py  test_quotient_lower_bound_search.py  test_rs_code.py  test_structured_bad_centers.py  test_triage_search.py  test_triage_validation.py
